# rust-practice

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/closure/: cacher.rs  closure.rs  config.rs  iterator.rs  iterator_self_define.rs  mod.rs  run.rs
src/concurrency/: atomic.rs  future.rs  mod.rs  msg_passing.rs  spawn_thread.rs  tokio_work.rs
src/datatypes/: array.rs  enuma.rs  functions.rs  hashmap.rs  mod.rs  optiont.rs  slice.rs  stringcollect.rs  structa.rs  trait_object.rs  truple.rs  vector.rs
src/document/: doc.rs
src/errors/: errhandlers.rs  mod.rs
src/generic/: largest.rs  lifetimes.rs  mod.rs
src/guessgame/: guess.rs  hello.rs  mod.rs
src/macros/: macrose.rs  mod.rs
src/oop/: mod.rs  state_change.rs
src/ownership/: ownership.rs  readme.md
src/pattern/: mod.rs  pattern.rs
src/smartpointer/: cow.rs  deref_trait.rs  drop_trait.rs  mod.rs  rc_cell_t_ref.rs  rc_t_ref.rs  smart_pointer.rs
src/tests/: tests.rs
src/truple/: mod.rs  truple.rs
src/unsafely/: mod.rs  unsafely.rs
