[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
itertools = "0.10.5"
regex = "1.4"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0"



[profile.release]
panic = 'abort' # will abort im, not clean the stack/heap etc.
opt-level = 3

[profile.dev]
opt-level = 0   # rust complier optimization level
